--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,4 @@ Noah S. Oblath [2]
 Institutions
 ------------
 1. University of Washington, Seattle, WA
-2. Massachusetts Institute of Technology, Cambridge, MA
+2. Pacific Northwest National Laboratory, Richland, WA
